--- a/nextjs_landing_page/package.json
+++ b/nextjs_landing_page/package.json
@@ -8,7 +8,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
